--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -89,13 +89,13 @@
           <span class="title">小区活动</span>
           </a>
         </li>
-        <li class="last" ng-class="{active: main.isPath('zhao')}">
+        <li class="last" ng-class="{active: main.isPath('zhaos')}">
           <a href="#/zhaos">
           <i class="icon-file-text"></i>
           <span class="title">招兵买马</span>
           </a>
         </li>
-        <li class="last" ng-class="{active: main.isPath('qiu')}">
+        <li class="last" ng-class="{active: main.isPath('qius')}">
           <a href="#/qius">
           <i class="icon-file-text"></i>
           <span class="title">求文若渴</span>
