--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,7 @@
 html {
   font-size: 100%;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -9,7 +9,7 @@ body {
   padding: 0;
   width: 100%;
   font: normal 100% "Lucida Grande", Helvetica, Arial, sans-serif;
-  height: 100%;
+  min-height: 100%;
 }
 
 *, *:before, *:after {
@@ -177,4 +177,38 @@ body {
 
 .info img {
   width: 100%;
+}
+
+#notice .abstract {
+  border: 1px solid #cacaca;
+  border-left: 5px solid #0071bc;
+  padding: 10px 15px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+#notice .me table {
+  width: 100%;
+  color: #5D5D5D;
+}
+
+#notice .me table td hr {
+  border-style: dashed;
+  border-width: thin;
+}
+
+#notice .logos {
+  padding: 5%;
+  width: 100%;
+  float: left;
+}
+
+#notice .logos img.left {
+  width: 40%;
+  float: left
+}
+
+#notice .logos img.right {
+  width: 40%;
+  float: right
 }
