--- a/views/wechat/articleDetail.ejs
+++ b/views/wechat/articleDetail.ejs
@@ -2,18 +2,38 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小区公告</title>
+    <title>趣文</title>
     <link rel='stylesheet' href='/stylesheets/main.css' />
   </head>
   <body>
     <div id='notice'>
+      <div class="abstract">
+        <%= obj.abstract %>
+      </div>
       <p class="title"><%=obj.title %></p>
       <p class="date">
-        <%=obj.time %>
+        <%= obj.time %>
       </p>
       <div class="info">
+        <img src="<%= obj.cover %>" alt="">
         <%- obj.detail %>
       </div>
+      <div class="me">
+        <table>
+         <tr style="width: 100%">
+          <td style="width:32%"><hr></td>
+          <td style="width:36%; text-align:center">请关注小玛哥</td>
+          <td style="width:32%"><hr></td>
+         </tr>
+        </table>
+        <div class="logos">
+          <img src="/images/logo2.png" alt="" class="left">
+          <img src="/images/qr.png" alt="" class="right">
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+    <div id="footer">
     </div>
   </body>
 </html>
