--- a/views/wechat/article.ejs
+++ b/views/wechat/article.ejs
@@ -6,6 +6,7 @@
   <title>趣文</title>
   <link rel="stylesheet" href="/stylesheets/ser.css">
   <script type="text/javascript" src="/javascripts/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="/javascripts/date.js"></script>
 </head>
 <body>
 <div id="container">
@@ -22,21 +23,27 @@
                 return;
             for(var i = 0; i < rows.length;i++){
                 var date = rows[i].time;
+                var current_date = new Date();
+                current_date = current_date.Format('yyyy-M-d');
                 if( !currentList || date !== currentList.theDate){
                     currentList = $('<div class="list2"></div>');
                     currentList.theDate = date;
                     container.append(currentList);
 
+                    if (current_date !== date){
+                      var headline = '<table class="time" style="font-size: 0.6em">'+
+                                     '       <tr style="width: 100%">'+
+                                     '       <td style="width: 35%"><hr></td>'+
+                                     '<td style="width: 30%; text-align: center">' +
+                                                    rows[i].time +'</td>'+
+                                     '<td style="width: 35%"><hr></td>'+
+                                     '</tr>'+
+                                     '</table>';
+                    } else {
+                      var headline = "";
+                    }
                     currentList.append($(
-                            '<div>'+
-                    '<table class="time" style="font-size: 0.6em">'+
-                    '       <tr style="width: 100%">'+
-                    '       <td style="width: 35%"><hr></td>'+
-                    '<td style="width: 30%; text-align: center">' +
-                                   rows[i].time +'</td>'+
-                    '<td style="width: 35%"><hr></td>'+
-                    '</tr>'+
-                    '</table>'+
+                            '<div>'+headline+
                     '<div  class="message3">'+
                     '       <div onclick="window.location.href=\'/wechat/articleDetail?id=' + rows[i].id +
                                     '\'" style="float: left;width: 65%">'+
@@ -49,8 +56,7 @@
                     '<div class="clear"></div>'+
                     '</div>'
                     ))
-                }
-                else{
+                }else{
                     currentList.append($(
                                     '<div>'+
                                     '<table class="noTime">'+
