--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -86,7 +86,7 @@
         <li class="last" ng-class="{active: main.isPath('activities')}">
           <a href="#/activities">
           <i class="icon-envelope-alt"></i>
-          <span class="title">小区活动</span>
+          <span class="title">活动</span>
           </a>
         </li>
         <li class="last" ng-class="{active: main.isPath('zhaos')}">
