--- a/views/admin/footer.ejs
+++ b/views/admin/footer.ejs
@@ -25,6 +25,7 @@
   <script src="media/js/jquery.blockui.min.js" type="text/javascript"></script>
   <script src="media/js/jquery.cookie.min.js" type="text/javascript"></script>
   <script src="media/js/jquery.uniform.min.js" type="text/javascript" ></script>
+  <script type="text/javascript" src="media/js/bootstrap-datetimepicker.js"></script>
   <!-- END CORE PLUGINS -->
   <!-- BEGIN PAGE LEVEL PLUGINS -->
   <!--<script src="media/js/jquery.vmap.js" type="text/javascript"></script>-->
