--- a/views/wechat/activity.ejs
+++ b/views/wechat/activity.ejs
@@ -3,7 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>小区活动</title>
+  <title>活动</title>
   <link rel="stylesheet" href="/stylesheets/ser.css">
   <script type="text/javascript" src="/javascripts/jquery-2.1.1.min.js"></script>
 </head>
