--- a/views/admin/partials/activityForm.ejs
+++ b/views/admin/partials/activityForm.ejs
@@ -75,7 +75,7 @@
   <div class="control-group">
     <label class="control-label">结束时间</label>
     <div class="controls">
-      <input type="text" class="m-wrap large" ng-model='activity.endAt' required />
+      <input type="text" class="m-wrap large" ng-model='activity.endAt' placeholder="yyyy-MM-dd HH:mm" required />
     </div>
   </div>
 
