--- a/views/wechat/zhao.ejs
+++ b/views/wechat/zhao.ejs
@@ -44,9 +44,8 @@
                     }
                     currentList.append($(
                             '<div>'+headline+
-                    '<div  class="message3">'+
-                    '       <div onclick="window.location.href=\'/wechat/zhaoDetail?id=' + rows[i].id +
-                                    '\'" style="float: left;width: 65%">'+
+                    '<div  class="message3" onclick="window.location.href=\'/wechat/zhaoDetail?id=' + rows[i].id +'\'">'+
+                    '       <div style="float: left;width: 65%">'+
                     '       <div class="title2">' +
                                    rows[i].title +'</div>'+
                     '<div class="content2">' +
@@ -65,9 +64,8 @@
                                     '       <td style="width: 100%"><hr></td>'+
                                     '</tr>'+
                                     '</table>'+
-                                    '<div class="message3">'+
-                                    '       <div onclick="window.location.href=\'/wechat/zhaoDetail?id=' + rows[i].id +
-                                            '\'" style="float: left;width: 65%">'+
+                                    '<div class="message3" onclick="window.location.href=\'/wechat/zhaoDetail?id=' + rows[i].id + '\'">'+
+                                    '       <div style="float: left;width: 65%">'+
                                     '       <div class="title2">' +
                                     rows[i].title +'</div>'+
                                     '<div class="content2">' +
