--- a/views/wechat/activity.ejs
+++ b/views/wechat/activity.ejs
@@ -21,29 +21,18 @@
             if(rows.length == 0)
                 return;
             for(var i = 0; i < rows.length;i++){
-                var date = rows[i].time;
-                if( !currentList || date !== currentList.theDate){
+                if( !currentList){
                     currentList = $('<div class="list2"></div>');
-                    currentList.theDate = date;
                     container.append(currentList);
 
                     currentList.append($(
                             '<div>'+
-                    '<table class="time" style="font-size: 0.5em">'+
-                    '       <tr style="width: 100%">'+
-                    '       <td style="width: 38%"><hr></td>'+
-                    '<td style="width: 24%; text-align: center">' +
-                                   rows[i].time +'</td>'+
-                    '<td style="width: 38%"><hr></td>'+
-                    '</tr>'+
-                    '</table>'+
-                    '<div  class="message3">'+
-                    '<div onclick="window.location.href=\'/wechat/activityDetail?id=' + rows[i].id +
-                                    '\'" style="float: left;width: 65%">'+
-                    '       <div class="title2">' +
-                                   rows[i].title +'</div>'+
-                    '<div class="content2">' +
-                                   rows[i].detail.replace(/<[^>]+>/g,"").substring(0,70) +'</div>'+
+                    '<div class="message3" onclick="window.location.href=\'/wechat/activityDetail?id=' + rows[i].id + '\'">'+
+                    '<div style="float: left;width: 68%">'+
+                    '       <div class="title3">' +
+                                   rows[i].entitle +'</div>'+
+                    '<div class="content3">' +
+                                   rows[i].time +'</div>'+
                     '</div>'+
                     '<img src="'+ rows[i].cover +'">'+
                     '<div class="clear"></div>'+
@@ -58,13 +47,12 @@
                                     '       <td style="width: 100%"><hr></td>'+
                                     '</tr>'+
                                     '</table>'+
-                                    '<div class="message3">'+
-                                    '<div onclick="window.location.href=\'/wechat/activityDetail?id=' + rows[i].id +
-                                            '\'" style="float: left;width: 65%">'+
-                                    '       <div class="title2">' +
-                                    rows[i].title +'</div>'+
-                                    '<div class="content2">' +
-                                    rows[i].detail.replace(/<[^>]+>/g,"").substring(0,70) +'</div>'+
+                                    '<div class="message3" onclick="window.location.href=\'/wechat/activityDetail?id=' + rows[i].id + '\'">'+
+                                    '<div style="float: left;width: 68%">'+
+                                    '       <div class="title3">' +
+                                    rows[i].entitle +'</div>'+
+                                    '<div class="content3">' +
+                                    rows[i].time +'</div>'+
                                     '</div>'+
                                     '<img src="'+ rows[i].cover +'">'+
                                     '<div class="clear"></div>'+
