增加管理员

--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -101,6 +101,12 @@
           <span class="title">求文若渴</span>
           </a>
         </li>
+        <li class="last" ng-class="{active: main.isPath('setting')}">
+          <a href="#/setting">
+          <i class="icon-cogs"></i>
+          <span class="title">管理员设置</span>
+          </a>
+        </li>
       </ul>
     </div>
     <div class="page-content">
