--- a/views/admin/footer.ejs
+++ b/views/admin/footer.ejs
@@ -47,6 +47,7 @@
   <!-- END PAGE LEVEL PLUGINS -->
   <!-- BEGIN PAGE LEVEL SCRIPTS -->
   <script src="media/js/app.js" type="text/javascript"></script>
+  <!-- <script src="media/js/form-components.js"></script> -->
   <!--<script src="media/js/index.js" type="text/javascript"></script>-->
   <!-- END PAGE LEVEL SCRIPTS -->
   <!--for angular-->
@@ -68,6 +69,7 @@
   <script>
     jQuery(document).ready(function() {
        App.init(); // initlayout and core plugins
+       //FormComponents.init();
        //Index.init();
        //Index.initJQVMAP(); // init index page's custom scripts
        //Index.initCalendar(); // init index page's custom scripts
