--- a/views/admin/partials/activityForm.ejs
+++ b/views/admin/partials/activityForm.ejs
@@ -68,14 +68,20 @@
   <div class="control-group">
     <label class="control-label">开始时间</label>
     <div class="controls">
-      <input type="text" class="m-wrap large" ng-model='activity.startAt' placeholder="yyyy-MM-dd HH:mm" required />
+      <div class="input-append date form_datetime">
+        <input size="16" type="text" class="m-wrap" ng-model='activity.startAt'>
+        <span class="add-on"><i class="icon-calendar"></i></span>
+      </div>
     </div>
   </div>
 
   <div class="control-group">
     <label class="control-label">结束时间</label>
     <div class="controls">
-      <input type="text" class="m-wrap large" ng-model='activity.endAt' placeholder="yyyy-MM-dd HH:mm" required />
+      <div class="input-append date form_datetime">
+        <input size="16" type="text" class="m-wrap" ng-model='activity.endAt'>
+        <span class="add-on"><i class="icon-calendar"></i></span>
+      </div>
     </div>
   </div>
 
@@ -92,3 +98,12 @@
     <a class="btn" href='#/activitys'>撤销</a>
   </div>
 </div>
+
+<script>
+  $(".form_datetime").datetimepicker({
+    format: "yyyy-mm-dd hh:ii",
+    autoclose: true,
+    todayBtn: true,
+    pickerPosition: (App.isRTL() ? "bottom-right" : "bottom-left")
+  });
+</script>
