--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -18,7 +18,7 @@
 </head>
 <body class="login">
   <div class="logo">
-      <img src="/media/image/logo-big.png" alt="">
+    <img src="/images/logo.png" alt="" height="20" width="110"/>
   </div>
   <div class="content">
     <form class="form-vertical login-form" action="/admin/login" method='post'>
