--- a/views/admin/partials/admin.ejs
+++ b/views/admin/partials/admin.ejs
@@ -35,10 +35,10 @@
           {{admin.name}}
         </td>
         <td class="action">
-          <a href="#/setting/{{admin._id}}" class="btn btn-primary btn-xs">
+          <a href="#/setting/{{admin.id}}" class="btn btn-primary btn-xs">
             <span class="glyphicon glyphicon-edit"></span>编辑
           </a>
-          <a href="javascript:void(0)" ng-click="rmAdmin(admin._id)" class="btn btn-danger btn-xs">
+          <a href="javascript:void(0)" ng-click="rmAdmin(admin.id)" class="btn btn-danger btn-xs">
             <span class="glyphicon glyphicon-remove"></span>删除
           </a>
         </td>
