--- a/views/wechat/day.ejs
+++ b/views/wechat/day.ejs
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,user-scalable=no" />
   <title>DayDay Up</title>
   <link rel="stylesheet" href="/stylesheets/ser.css">
   <script type="text/javascript" src="/javascripts/jquery-2.1.1.min.js"></script>
