--- a/views/wechat/activity.ejs
+++ b/views/wechat/activity.ejs
@@ -30,7 +30,7 @@
                     '<div class="message3" onclick="window.location.href=\'/wechat/activityDetail?id=' + rows[i].id + '\'">'+
                     '<div style="float: left;width: 68%">'+
                     '       <div class="title3">' +
-                                   rows[i].entitle +'</div>'+
+                                   rows[i].title +'</div>'+
                     '<div class="content3">' +
                                    rows[i].time +'</div>'+
                     '</div>'+
@@ -50,7 +50,7 @@
                                     '<div class="message3" onclick="window.location.href=\'/wechat/activityDetail?id=' + rows[i].id + '\'">'+
                                     '<div style="float: left;width: 68%">'+
                                     '       <div class="title3">' +
-                                    rows[i].entitle +'</div>'+
+                                    rows[i].title +'</div>'+
                                     '<div class="content3">' +
                                     rows[i].time +'</div>'+
                                     '</div>'+
@@ -61,6 +61,7 @@
                 }
                 $("img").each(function(){
                   $(this).css("height", $(this).width());
+                  B
                 });
             }
 
