--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -129,3 +129,17 @@ ul.nav.nav-tabs li a {
   margin-bottom: 10px;
   color: #737373;
 }
+
+.header .nav > li.dropdown.user .dropdown-toggle {
+  padding: 9px 4px 9px 9px;
+}
+td.center {
+  padding-top: 26px;
+}
+td.center-actions {
+  padding-top: 22px;
+}
+td img {
+  width: 60px;
+  height: 60px;
+}
