--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -193,11 +193,12 @@ body {
 }
 
 #notice .abstract {
-  border: 1px solid #cacaca;
-  border-left: 5px solid #0071bc;
-  padding: 10px 15px;
+  /*border: 1px solid #cacaca;*/
+  /*border-left: 5px solid #0071bc;*/
+  /*padding: 10px 15px;*/
   width: 100%;
   margin-bottom: 20px;
+  color: #0071bc;
 }
 
 #notice .me table {
