--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -37,6 +37,9 @@
             <span class="username">Admin</span>
             <i class="icon-angle-down"></i>
             </a>
+            <ul class="dropdown-menu">
+              <li><a href="/admin/logout"><i class="icon-key"></i> 退出</a></li>
+            </ul>
           </li>
         </ul>
       </div>
