--- a/views/admin/partials/activityForm.ejs
+++ b/views/admin/partials/activityForm.ejs
@@ -19,7 +19,7 @@
     </ul>
   </div>
 </div>
-<div class="row-fluid">
+<div class="form-horizontal">
   <div class="control-group">
     <label class="control-label">标题</label>
     <div class="controls">
@@ -28,24 +28,17 @@
   </div>
 
   <div class="control-group">
-    <label class="control-label">英语标题</label>
+    <label class="control-label">封面: </label>
     <div class="controls">
-      <input type="text" class="m-wrap large" ng-model='activity.entitle' required />
-    </div>
-  </div>
-
-  <div class="control-group">
-    <label class="col-sm-2 control-label">封面: </label>
-    <div class="col-sm-10">
       <span class="help-block">建议尺寸: 360*200px</span>
       <img class="middle" ng-src="{{activity.cover}}">
     </div>
   </div>
   <div class="control-group">
-    <div class="col-sm-offset-2 col-sm-10">
+    <div class="controls">
       <span class="btn blue fileinput-button">
         <i class="icon-plus"></i>
-        <span>上传图片</span>
+        <span>替换图片</span>
         <input id="imgupload" type="file" fileupload name="files" data-url="/upload" done="uploadFinished(e, data, 'cover')">
       </span>
     </div>
@@ -59,27 +52,10 @@
   </div>
 
   <div class="control-group">
-    <label class="control-label">活动地址(英语)</label>
-    <div class="controls">
-      <input type="text" class="m-wrap large" ng-model='activity.enadr' required />
-    </div>
-  </div>
-
-  <div class="control-group">
     <label class="control-label">开始时间</label>
     <div class="controls">
       <div class="input-append date form_datetime">
         <input size="16" type="text" class="m-wrap" ng-model='activity.startAt'>
-        <span class="add-on"><i class="icon-calendar"></i></span>
-      </div>
-    </div>
-  </div>
-
-  <div class="control-group">
-    <label class="control-label">结束时间</label>
-    <div class="controls">
-      <div class="input-append date form_datetime">
-        <input size="16" type="text" class="m-wrap" ng-model='activity.endAt'>
         <span class="add-on"><i class="icon-calendar"></i></span>
       </div>
     </div>
