--- a/views/admin/partials/haos.ejs
+++ b/views/admin/partials/haos.ejs
@@ -32,11 +32,12 @@
       </thead>
       <tbody>
         <tr ng-repeat="hao in haos">
-          <td>{{$index + 1}}</td>
-          <td>{{hao.title}}</td>
-          <td>{{hao.time | date:"yyyy-MM-dd HH:mm"}}</td>
-          <td>{{hao.abstract | truncate}}</td>
-          <td>
+          <td class='center'>{{$index + 1}}</td>
+          <td class='center'>{{hao.title}}</td>
+          <td class='center'>{{hao.time | date:"yyyy-MM-dd HH:mm"}}</td>
+          <td class='center'>{{hao.abstract | truncate}}</td>
+          <td><img src="{{hao.cover}}" alt=""></td>
+          <td class='center-actions'>
             <a href="#/haos/{{hao.id}}" class="btn btn-warning btn-xs">
               <span class="glyphicon glyphicon-edit"></span>编辑
             </a>
