--- a/views/wechat/activityDetail.ejs
+++ b/views/wechat/activityDetail.ejs
@@ -8,28 +8,33 @@
   </head>
   <body>
     <div id='notice'>
-      <p class="toplogo"><img src="/images/logo1.jpg" alt=""></p>
-      <div class="group">
-        <p class="title"><%=obj.title %></p>
-        <p class="date">
-          <%= obj.time %>
-        </p>
-        <p class="adr">
-          <%= obj.adr %>
-        </p>
-      </div>
-      <div class="group">
-        <p class="title"><%=obj.entitle %></p>
-        <p class="date">
-          <%= obj.time %>
-        </p>
-        <p class="adr">
-          <%= obj.enadr %>
-        </p>
-      </div>
+      <!--<p class="toplogo"><img src="/images/logo1.jpg" alt=""></p>-->
+      <!--<div class="group">-->
+        <!--<p class="title"><%=obj.title %></p>-->
+        <!--<p class="date">-->
+          <!--<%= obj.time %>-->
+        <!--</p>-->
+        <!--<p class="adr">-->
+          <!--<%= obj.adr %>-->
+        <!--</p>-->
+      <!--</div>-->
       <div class="info">
         <%- obj.detail %>
       </div>
+      <% if (obj.ad.length > 0){ %>
+        <div class="me">
+          <table>
+           <tr style="width: 100%">
+            <td style="width:33%"><hr></td>
+            <td style="width:34%; text-align:center">广告时间</td>
+            <td style="width:33%"><hr></td>
+           </tr>
+          </table>
+          <div class="info">
+            <%- obj.ad %>
+          </div>
+        </div>
+      <% }%>
       <div class="me">
         <table>
          <tr style="width: 100%">
