--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -33,7 +33,7 @@
         </a>
         <ul class="nav pull-right">
           <li class="dropdown user">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown">
             <span class="username">Admin</span>
             <i class="icon-angle-down"></i>
             </a>
