--- a/views/admin/partials/activityForm.ejs
+++ b/views/admin/partials/activityForm.ejs
@@ -69,6 +69,14 @@
     </div>
   </div>
 
+  <div class="control-group">
+    <label class="control-label">广告: </label>
+    <div class="controls">
+      <script id="adeditor" type="text/plain" style="width:945px;height:500px;">
+      </script>
+    </div>
+  </div>
+
   <div class="form-actions">
     <button class="btn blue" ng-click="submit()"><i class="icon-ok"></i> 提交</button>
     <a class="btn" href='#/activitys'>撤销</a>
