--- a/views/wechat/activity.ejs
+++ b/views/wechat/activity.ejs
@@ -33,6 +33,8 @@
                                    rows[i].title +'</div>'+
                     '<div class="content3">' +
                                    rows[i].time +'</div>'+
+                    '<div class="content3">' +
+                                   rows[i].adr +'</div>'+
                     '</div>'+
                     '<img src="'+ rows[i].cover +'">'+
                     '<div class="clear"></div>'+
@@ -53,6 +55,8 @@
                                     rows[i].title +'</div>'+
                                     '<div class="content3">' +
                                     rows[i].time +'</div>'+
+                                    '<div class="content3">' +
+                                    rows[i].adr +'</div>'+
                                     '</div>'+
                                     '<img src="'+ rows[i].cover +'">'+
                                     '<div class="clear"></div>'+
@@ -61,7 +65,6 @@
                 }
                 $("img").each(function(){
                   $(this).css("height", $(this).width());
-                  B
                 });
             }
 
