--- a/views/admin/partials/index.ejs
+++ b/views/admin/partials/index.ejs
@@ -6,7 +6,7 @@
     <ul class="breadcrumb">
       <li>
         <i class="icon-home"></i>
-        <a href="/index">Home</a>
+        <a href="#/index">Home</a>
         <i class="icon-angle-right"></i>
       </li>
     </ul>
